--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-data-table-component": "^7.3.1",
     "react-dom": "^17.0.2",
