--- a/package.json
+++ b/package.json
@@ -1,44 +1,96 @@
 {
-  "name": "amazonia-shop",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.16.13",
-    "bootstrap": "^5.1.3",
-    "react": "^17.0.2",
-    "react-data-table-component": "^7.3.1",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "amazonia-shop",
+    "version": "0.1.0",
+    "description": "tienda virtual de servicios",
+    "main": "index.jsx",
+    "private": true,
+    "dependencies": {
+        "@ant-design/icons": "^4.7.0",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "antd": "^4.16.13",
+        "bootstrap": "^5.1.3",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "nodemon": "^2.0.14",
+        "react": "^17.0.2",
+        "react-data-table-component": "^7.3.1",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
+        "react-scripts": "4.0.3",
+        "styled-components": "^5.3.1",
+        "web-vitals": "^1.0.1"
+    },
+    "scripts": {
+        "start": "node src/index.jsx",
+        "dev": "nodemon src/index.jsx",
+        "build": "react-scripts build",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.js"
+        },
+        "setupFilesAfterEnv": [
+            "<rootDir>/src/setupTests.js"
+        ],
+        "testPathIgnorePatterns": [
+            "/node_modules/",
+            "/public/"
+        ],
+        "transform": {
+            "^.+\\.jsx?$": "babel-jest"
+        },
+        "transformIgnorePatterns": [
+            "/node_modules/"
+        ],
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "jsx"
+        ],
+        "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|js?|tsx?|ts?)$",
+        "modulePaths": [
+            "<rootDir>/src"
+        ],
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ],
+        "globals": {
+            "__PATH_PREFIX__": ""
+        }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Debugger-Team-MisionTIC-I/Amazonia-shop.git"
+    },
+    "keywords": [],
+    "author": "Brayan Enciso",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Debugger-Team-MisionTIC-I/Amazonia-shop/issues"
+    },
+    "homepage": "https://github.com/Debugger-Team-MisionTIC-I/Amazonia-shop#readme"
 }
