--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "antd": "^4.16.13",
+        "axios": "^0.24.0",
         "bootstrap": "^5.1.3",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "mongoose": "^6.0.12",
         "nodemon": "^2.0.14",
         "react": "^17.0.2",
         "react-data-table-component": "^7.3.1",
         "react-dom": "^17.0.2",
+        "react-google-login": "^5.2.2",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.1",
